card display改block、使用float:left、增加箭頭

--- a/Work.html
+++ b/Work.html
@@ -25,7 +25,7 @@
   </div>
 
 
-<div class="container_up">
+<div class="card-container">
 
   <div class="card">
     <div class="image">
@@ -42,13 +42,10 @@
     <div class="image">
       <img src="images/work/Mathematical Models_1.jpg" alt="Mathematical Models">
     </div>
-
     <div class="name">
         Mathematical Models
     </div>
-
   </div>
-
 
   <div class="card">
 
@@ -77,11 +74,9 @@
   </div>
 
 
-</div>
 
 
 
-<div class="container_bottom">
 
   <div class="card">
 
@@ -134,8 +129,14 @@
 
   </div>
 
+<div class="arrow">
+ <img src="images/work/Arrow-OutRight-icon.png">
 </div>
 
+
+
+
+</div>
 
 
 
